2008-10-06  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-gtk.sym.in:
	* ccss/ccss.sym.in:
	* ccss/exports.sym:
	* src/Makefile.am:
	* src/css2gtkrc.c:
	* src/exports.sym:
	* src/gce-color.c:
	* src/gce-color.h:
	* src/gce-functions.c:
	* src/gce-functions.h:
	* src/gce-maps.c:
	* src/gce-maps.h:
	* src/gce-node.c:
	* src/gce-node.h:
	* src/gce-rc-style.c:
	* src/gce-rc-style.h:
	* src/gce-serialize.c:
	* src/gce-serialize.h:
	* src/gce-style.c:
	* src/gce-style.h:
	* src/gce-theme.c:
	Fix `make distcheck'.

2008-10-06  Robert Staudinger  <robsta@gnome.org>

	patch by: Thomas Wood <thomas@linux.intel.com>

	* doc/Makefile.am: fix input path.

2008-10-06  Robert Staudinger  <robsta@gnome.org>

	* configure.in:
	* libccss-1.pc.in:
	Export features (rsvg, gtk).

2008-10-06  Robert Staudinger  <robsta@gnome.org>

	* libccss-1.pc.in: fix name.

2008-10-06  Robert Staudinger  <robsta@gnome.org>

	* Split out libccss.

2008-10-06  Robert Staudinger  <robsta@gnome.org>

	* libccss/ccss/ccss-color.c:
	* libccss/ccss/ccss-function.c:
	* src/gce-functions.c:
	* themes/gtk-css-test/gtk-2.0/styles.css:
	Finish basic color functions support.

2008-10-03  Robert Staudinger  <robsta@gnome.org>

	* libccss/ccss/ccss-color.c:
	* src/Makefile.am:
	* src/gce-color.c (added):
	* src/gce-color.h (added):
	* src/gce-functions.c:
	Initial gtk color mixing support (mix(), shade(), darker(), lighter()). Not completely hooked up yet.

2008-10-03  Robert Staudinger  <robsta@gnome.org>

	* TODO:
	* libccss/ccss/ccss-color.c:
	* src/gce-functions.c:
	Gtk color scheme support.

2008-10-03  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am: `make distcheck' with standalone libccss.

	* libccss/cccss/Makefile.am:
	* libccss/cccss/example-1.c:
	* libccss/cccss/example-2.c:
	* libccss/cccss/example-2.css:
	Update/fix examples.

	* src/gce-rc-style.c: fix warning.

2008-10-03  Robert Staudinger  <robsta@gnome.org>

	* libccss/ccss/Makefile.am: actually link dependent libraries.
